--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/activity_second"
+<FrameLayout
+    android:id="@+id/activity_third"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context="com.lincoln.www.transition.SecondActivity">
+    android:gravity="center"
+    tools:context="com.lincoln.www.transition.ThirdActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="top"
         android:theme="@style/AppTheme.AppBarOverlay">
-
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -27,16 +27,12 @@
 
     <ImageView
         android:id="@+id/iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:scaleType="fitXY"
         android:src="@mipmap/ic_launcher"
         android:transitionName="transition"
         />
 
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
-
-</LinearLayout>
+</FrameLayout>
