--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -12,5 +12,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowContentTransitions">true</item>
+        <!--<item name="android:windowSharedElementEnterTransition">@transition/changebounds</item>-->
+        <!--<item name="android:windowSharedElementExitTransition">@transition/changebounds</item>-->
     </style>
 </resources>
