--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -32,7 +32,7 @@
         android:layout_height="200dp"
         android:scaleType="fitXY"
         android:src="@mipmap/ic_launcher"
-        android:transitionName="transition"
+        android:transitionName="@string/transition"
         />
 
 </FrameLayout>
